fix spacing and smooth scroll

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 
 :root {
   --primary-color: #009688;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -168,9 +169,13 @@ header {
   list-style: none;
   background-color: #fff;
   color: #3d3d3d;
+  margin-bottom: 20px;
 }
 .work-list > li {
   margin-bottom: 20px;
+}
+.work-list > li:last-child {
+  margin: 0;
 }
 .work-list h4 {
   font-size: 16px;
